screenshot: don't segfault when taking a window picture with no delay

Add a timeout as a workaround.

https://bugzilla.gnome.org/show_bug.cgi?id=597435